<resources>

    <string name="app_name">Status Downloader</string>


    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="save">Save</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rate_text">Pleas rate out app with 5 stars if like it.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About</string>

    <string name="saved_files">Saved Files</string>
    <string name="no_files_found">No Files Found</string>
    <string name="gautham">Gautham</string>
    <string name="app_version">App Version</string>
    <string name="mail_id">gauthamnadar12@gmail.com</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="telegram_link">https://t.me/Mellow04</string>
    <string name="developer">Developer</string>
    <string name="check_for_update">Check for update</string>
    <string name="cant_find_whatsapp_dir">Cant find WhatsApp Dir</string>


    <string name="no_internet_connection">No internet connection.</string>
    <string name="connect_msg">Connect to the internet to continue.</string>
    <string name="error">Error.</string>
    <string name="errorInfo">An unexpected error.</string>
    <string name="try_again">Try again</string>
    <string name="ad">Ad</string>
    <string name="start">START</string>
    <string name="rate">Rate App</string>
    <string name="share">Share App</string>
    <string name="privacy">Privacy</string>
    <string name="back_to_home">Back To Home</string>
    <string name="go_to_wallpapers">Go To Wallpapers</string>
    <string name="install">Install</string>
    <string name="more_apps">More Apps</string>
    <string name="statues_saver">Statues Saver</string>
    <string name="name">Status Downloader</string>
    <string name="statues_saver_info">Never miss valuable statues again!</string>
    <string name="select_country">Please type your country</string>
    <string name="select_version">Please the version you want</string>
    <string name="select_gender">Please select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="version_pro">Version Pro</string>
    <string name="version_simple">Version Simple</string>
    <string name="select_language">Please select your language</string>
    <string name="english">English</string>
    <string name="india">India</string>
    <string name="iran">Iran</string>
    <string name="arabic">Arabic</string>
    <string name="txt_please_enter_your_message_and_counter">Please enter your message and counter.</string>
    <string name="txt_please_enter_your_message">Please enter your message.</string>
    <string name="country">Country</string>
    <string name="continue_">Continue</string>
    <string name="next">Next</string>
    <string name="direct_msg">Direct Message</string>
    <string name="download_statues">Download Statues</string>
    <string name="fancy_text">Fancy Text</string>
    <string name="big_text">Big Text</string>
    <string name="enter_a_phone_number">Enter a phone number</string>
    <string name="send_info">Send a whatsapp message to any phone number without saving contact.</string>
    <string name="send">Send</string>
    <string name="enter_a_text">Enter a text</string>
    <string name="fancy_text_info">Create a styled fancy text and amaze your friends.</string>
    <string name="big_text_info">Create a big fancy text and amaze your friends.</string>
    <string name="stickers">Stickers</string>
    <string name="text_style">Text Style</string>
    <string name="ads">Ads</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="qrReader">QR Reader</string>
    <string name="qrCodeResult">QR Code Result</string>
    <string name="repeat_text">Repeat Text</string>
    <string name="text_enter_repetition_limit">Enter Repeat Number</string>
    <string name="text_limit_note">Note : Number of Repeater Text Limit 999.</string>
    <string name="text_new_line_on">New Line</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_copy">Copy</string>
    <string name="text_clear">Clear</string>
    <string name="text_share">Share</string>
    <string name="repeat_number">Repeat number</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="clickhere">Click Here</string>

</resources>