<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_corner_2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/qrCodeResult"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/icon_close"
                        app:tint="@color/black" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_corner"
                    android:fontFamily="@font/font"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:text="@string/qrReader"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="15dp">

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_corner"
                    android:fontFamily="@font/font"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_corner"
                    android:backgroundTint="@color/accentColor"
                    android:fontFamily="@font/font"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
