<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:maxads="http://schemas.applovin.com/android/1.0"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_above="@id/banner_container"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font"
            android:text="@string/direct_msg"
            android:textColor="@color/accentColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/send_info"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="@color/accentColor3"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    app:ccp_arrowColor="@color/black"
                    app:ccp_contentColor="@color/black"
                    app:ccp_flagBorderColor="@color/black"
                    app:ccpDialog_textColor="@color/white"
                    app:ccpDialog_cornerRadius="10dp"
                    android:layout_marginStart="8dp"
                    app:ccpDialog_showTitle="false"
                    app:ccp_showFullName="false"
                    app:ccp_showNameCode="false"
                    app:ccpDialog_keyboardAutoPopup="false"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:background="#9E9C9C" />

                <EditText
                    android:id="@+id/number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="phone"
                    android:inputType="number"
                    android:backgroundTint="#003DB739"
                    android:fontFamily="@font/font"
                    android:hint="@string/enter_a_phone_number"
                    android:paddingEnd="8dp"
                    android:paddingStart="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="#9E9C9C"
                    android:textSize="20sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="@color/accentColor"
            app:cardCornerRadius="16dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/font"
                android:paddingHorizontal="50dp"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/banner_bg">

        <RelativeLayout
            android:id="@+id/bannerAd"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

    </RelativeLayout>

</RelativeLayout>